--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,16 +1,31 @@
 .button {
+    all:unset;
+    border-radius: 3px;
+    padding: 5px 24px;
+    cursor: pointer;
+    width: 130px;
+    text-align: center;
 }
 
 .disabled {
-}
-
-.secondary {
+    background-color: #004D99;
+    opacity: 50%;
 }
 
 .default {
+    color: #FFFFFF;
+    background-color: #0066cc;
+
+}
+
+.secondary {
+    color: #0066cc;
+    background-color: #FFFFFF;
+    border: 1px solid #0066cc;
 }
 
 .red {
+    background-color: #CC1439;
 }
 
 .default:hover {
